# DeepDECS

./: 2015-12-17-welcome-to-jekyll.orig  CV.html  Nature_Vectors.pde  README.md  Resources.html  UsefulLinks.html  _config.yml  blog.html  education.html  headstart.html  index.html  index_deepdecs.html  interests.html  processing.html  publications.html  start.sh
DNN/: README.md  requirements.txt
DNN/code/: architectures.py  confusion_matrices.py  create_new_safescad2_features.py
DNN/experiments/: README.txt  experiment_details.txt
Nature_Vectors/: Mover.pde  Nature_Vectors.pde
_includes/: footer.html  head.html  header.html  processing_head.html  sidebar.html
_layouts/: default.html  post.html  processing.html
_posts/: 2020-04-08-butWhichModel.html  2020-07-09-buildingEnsembles.html
augment_tool/: README.md  deepDECSAugment.py  library.py
case_studies/: README.md
case_studies/collision_prediction/simulator/box2d/robot_floor_validate_01/: CMakeLists.txt
case_studies/driver_attentiveness_management/: README.md
case_studies/mobile_robot_collision_limitation/: README.md
case_studies/mobile_robot_collision_limitation/simulator/box2d/robot_time_avg/: CMakeLists.txt  README.md
collision_prediction/: README.md
collision_prediction/dnn_model/: temperature_model
collision_prediction/simulator/box2d/robot_data_buckets/: CMakeLists.txt  main.cpp
css/: cv.css  default.css  edu.css  publication.css
images/: logo.psd
safeSCAD/EvoChecker/: safeSCAD-Bothconfig.properties  safeSCAD-NoVconfig.properties  safeSCAD-V1config.properties  safeSCAD-V2config.properties  safeSCADNoDNNconfig.properties
safeSCAD/dnn_model/: scaler_path
tutorial/: README.md  car-DNN-mat.pm  car.pctl  car.pm  conf_mat.txt
(+133 files in other folders)
